[gd_scene load_steps=8 format=2]

[ext_resource path="res://porta/tile-PORTA_avulsa_sm.png" type="Texture" id=1]
[ext_resource path="res://porta/tile-PORTA_arco_vazio_sm.png" type="Texture" id=2]
[ext_resource path="res://porta/Porta.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 74 )

[sub_resource type="Animation" id=2]
resource_name = "Close"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Porta:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 33, -0.25, 0, 0.25, 0, 53.6348, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Porta:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.257, -0.25, 0, 0.25, 0, 0.257233, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "bezier"
tracks/0/path = NodePath("Porta:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 53.6348, -0.25, 0, 0.25, 0, 33, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Porta:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.257233, -0.25, 0, 0.25, 0, 0.257, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 33, 69 )

[node name="Porta" type="StaticBody2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="Porta" type="Sprite" parent="."]
position = Vector2( 33, 0.257 )
texture = ExtResource( 1 )

[node name="Arco" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 31, 0 )
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 2 )
anims/Open = SubResource( 3 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 70, 0 )
shape = SubResource( 4 )

[node name="IndicatorLocked" type="Polygon2D" parent="."]
position = Vector2( -60, 12 )
color = Color( 0.533333, 0.207843, 0.0509804, 1 )
polygon = PoolVector2Array( 70.5, -92, 85.5, -93, 84.5, -105, 72, -108 )

[node name="IndicatorUnlocked" type="Polygon2D" parent="."]
position = Vector2( -60, 12 )
color = Color( 0.0509804, 0.533333, 0.117647, 1 )
polygon = PoolVector2Array( 70.5, -92, 85.5, -93, 84.5, -105, 72, -108 )
